recursion.cons.length.Length.scala.error
Erreur de compilation :
Length:2: error: Missing closing brace `}' assumed here
def length(l:List[Char]):Int = {
^Length:2: error: expected class or object definition
def length(l:List[Char]):Int = {
^